--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Rxjs - An API for Asynchronous programming with Observable Patterns</title>
+  <style>
+    #circle{
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      background-color: green;
+      position:absolute; 
+    }
+  </style>
 </head>
 <body>
+  <div id="circle"></div>
 <script src="app.js"></script>
 </body>
 </html>
