--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Rxjs - An API for Asynchronous programming with Observable Patterns</title>
   <style>
-    #circle{
+    #circle {
       width: 20px;
       height: 20px;
       border-radius: 50%;
       background-color: green;
-      position:absolute; 
+      position: absolute;
     }
   </style>
 </head>
+
 <body>
-  <div id="circle"></div>
-<script src="app.js"></script>
+  <!--<div id="circle"></div>-->
+  <button id="button">Get Movies</button>
+  <div id="output"></div>
+   <script src="app.js"></script>
 </body>
+
 </html>
